# dartsim-sandbox

./: .gitignore  CMakeLists.txt  README.md
resource/Nomad/: Nomad.urdf  Nomad_leg_test.urdf
resource/Nomad/meshes/: Foot1.stl  HFE_Actuator1.stl  KFE_Actuator1.stl  Lower_Leg1.stl  Upper_Leg1.stl  base_link.stl
resource/NomadFull/: Nomad.urdf
resource/NomadFull/meshes/: base_link.stl  foot_FL1.stl  foot_FR1.stl  foot_RL1.stl  foot_RR1.stl  haa_FL_link1.stl  haa_FR_link1.stl  haa_RL_link1.stl  haa_RR_link1.stl  hfe_FL_link1.stl  hfe_FR_link1.stl  hfe_RL_link1.stl  hfe_RR_link1.stl  kfe_FL_link1.stl  kfe_FR_link1.stl  kfe_RL_link1.stl  kfe_RR_link1.stl  lower_leg_FL_link1.stl  lower_leg_FR_link1.stl  lower_leg_RL_link1.stl  lower_leg_RR_link1.stl  upper_leg_FL_link1.stl  upper_leg_FR_link1.stl  upper_leg_RL_link1.stl  upper_leg_RR_link1.stl
resource/NomadLeg/: Leg.urdf
src/: CMakeLists.txt  custom_node_test.cpp  frame_test.cpp  full_test.cpp  input_handler_test.cpp  leg_push_up.cpp  urdf_full_test.cpp  urdf_leg_test.cpp  urdf_load.cpp
src/nomad_controller/: CMakeLists.txt
src/nomad_controller/include/: CrouchState.h  CubicPolynomialTrajectory.h  FiniteStateMachine.h  IdleState.h  NomadControlData.h  NomadLegController.h  NomadPrimaryControlFSM.h  NomadRobot.h  NomadState.h  StandState.h  State.h  StateTypes.h  TransitionEvent.h
src/nomad_controller/src/: CrouchState.cpp  CubicPolynomialTrajectory.cpp  FiniteStateMachine.cpp  IdleState.cpp  NomadPrimaryControlFSM.cpp  NomadRobot.cpp  StandState.cpp  State.cpp  TransitionEvent.cpp  nomad_controller.cpp
